# md2img-mcp

./: Dockerfile  HTTP_TRANSPORT_GUIDE.md  IMGKIT_IMPLEMENTATION_SUMMARY.md  IMGKIT_USAGE.md  MCP_SERVICE_GUIDE.md  MCP_TRANSPORT_SUMMARY.md  QUICK_START.md  README.md  REMOTE_ACCESS_GUIDE.md  REQUIREMENTS.md  USAGE_GUIDE.md  WKHTMLTOPDF_SUCCESS_REPORT.md  claude_desktop_config_example.json  claude_desktop_config_windows.json  demo_imgkit.py  final_demo.py  http_client_example.py  http_server.py  pyproject.toml  quick_start_mcp.py  requirements.txt  server.py  start_http_server.py  start_mcp_server.py  start_remote_server.py
outputs/: 31aa173b-f554-4a86-afd6-15ee3fa1ec27.json  tasks.json
word2img_mcp/: __init__.py  __main__.py  mcp_app.py  render.py  store.py
